# kindle-to-booklog

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  main.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: ruff.yml  tagpr.yml  test.yml
app/: main.js
src/kindle_to_booklog/: __init__.py  booklog.py  cli.py  kindle.py
tests/: test_booklog.py  test_cli.py  test_kindle.py
tests/fixtures/: bookdata.sql  kindle_sync_metadata.xml
